syntax = "proto3";

package cakelab.arflow_grpc.v1;

import "cakelab/arflow_grpc/v1/intrinsics.proto";
import "google/protobuf/timestamp.proto";
import "cakelab/arflow_grpc/v1/device.proto";
import "cakelab/arflow_grpc/v1/session.proto";

option csharp_namespace = "CakeLab.ARFlow.Grpc.V1";


message RegisterIntrinsicsRequest {
  SessionUuid session_id = 1;
  Device device = 2;
  google.protobuf.Timestamp device_timestamp = 3;
  Intrinsics intrinsics = 4;
}
